# bunruija

./: .buildinfo  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  LICENCE.txt  README.md  build.py  classifier.html  feature_extraction.html  genindex.html  index.html  objects.inv  predictor.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: github_page.yaml  loader.py  tagpr.yaml  unittest.yaml
_sources/: binarizer.rst.txt  feature_extraction.rst.txt  predictor.rst.txt
bunruija/: __init__.py  binarizer.py  dataclass.py  evaluate.py  evaluator.py  feature_extractor.py  gen_yaml.py  options.py  pipeline_builder.py  predict.py  predictor.py  registry.py  saver.py  train.py  trainer.py
bunruija/classifiers/: __init__.py  classifier.py  lgb.py  lstm.py  prado.py  transformer.py  util.py
bunruija/classifiers/prado/: __init__.py  model.py  string_projector.pyx
bunruija/classifiers/qrnn/: __init__.py  model.py  qrnn_layer.py
bunruija/data/: __init__.py  dataset.py  dictionary.py
bunruija/feature_extraction/: __init__.py  sentence_pair.py  sequence.py
bunruija/filters/: __init__.py  filter.py  pos_filter.py
bunruija/modules/: bunruija_vector.cc  bunruija_vector.h  static_embedding.py  vector_processor.pyx
bunruija/tokenizers/: __init__.py  mecab_tokenizer.py  space_tokenizer.py  tokenizer.py  tokenizer_registry.py  util.py
bunruija_cli/: evaluate.py  gen_yaml.py  predict.py  preprocess.py  train.py
csrc/: keyed_vector.cc  string_projector_op.cc  string_util.cc
docs/: classifier.rst  conf.py  evaluator.rst  index.rst  trainer.rst  tutorial.rst
docs/_build/html/: binarizer.html  evaluator.html  index.html  objects.inv  search.html  searchindex.js  trainer.html  tutorial.html
example/jglue/jcola/: README.md  create_jcola_data.py
example/jglue/jnli/: create_jnli_data.py
example/jglue/marc_ja/: README.md  create_marc_ja_data.py
example/jglue/settings/: svm.yaml
example/jglue/settings/classification/: svm.yaml
example/jglue/settings/sentence_pair_classification/: lstm.yaml  transformer.yaml
example/livedoor_corpus/: README.md  create_data.py  download_embedding.sh  lgb.yaml  lstm.yaml  stacking.yaml  svm.yaml  voting.yaml
example/livedoor_corpus/settings/: lgb.yaml  lgbm.yaml  lstm.yaml  prado.yaml  qrnn.yaml  stacking.yaml  svm.yaml  transformer.yaml
example/yelp_polarity/: create_data.py  requirements.txt
example/yelp_polarity/settings/: prado.yaml
include/bunruija/: keyed_vector.h  status.h  string_projector_op.h
include/internal/: string_util.h
tests/: test_binary.py  test_dataclass.py  test_pipeline_builder.py  test_prado.py  test_static_embedding.py  test_tokenizer.py
tests/classifiers/: test_prado.py  test_qrnn.py
tests/data/: test_dataset.py
tests/feature_extraction/: sequence.py
tests/modules/: test_static_embedding.py
