[tool.poetry]
name = "bunruija"
version = "0.1.0"
description = "A text classification toolkit"
authors = ["Takuya Makino <takuyamakino15@gmail.com>"]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Cython = "^0.29.26"
lightgbm = "^3.3.1"
PyYAML = "^6.0"
torch = "^2.1.2"
transformers = "^4.36.2"
unidic-lite = "^1.0.8"
mmh3 = "^3.0.0"
fugashi = "^1.1.1"
ipadic = "^1.0.0"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"
hydra-core = "^1.2.0"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
bunruija-evaluate = 'bunruija_cli.evaluate:cli_main'
bunruija-predict = 'bunruija_cli.predict:cli_main'
bunruija-preprocess = 'bunruija_cli.preprocess:cli_main'
bunruija-train = 'bunruija_cli.train:cli_main'

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "cython"]
build-backend = "poetry.core.masonry.api"
