[tool.poetry]
name = "bunruija"
version = "0.0.4"
description = "A text classification toolkit"
authors = ["Takuya Makino <takuyamakino15@gmail.com>"]
homepage = "https://github.com/tma15"
repository = "https://github.com/tma15/bunruija"
readme = "README.md"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
Cython = "^3.0.8"
lightgbm = "^4.2.0"
torch = "^2.1.2"
transformers = "^4.36.2"
unidic-lite = "^1.0.8"
mmh3 = "^3.0.0"
fugashi = "^1.1.1"
ipadic = "^1.0.0"
scikit-learn = "^1.0.2"
scipy = "^1.8.0"
hydra-core = "^1.2.0"
loguru = "^0.7.2"
datasets = "^2.16.0"
ruamel-yaml = "^0.18.5"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
bunruija-gen-yaml = 'bunruija.gen_yaml:cli_main'
bunruija-evaluate = 'bunruija.evaluate:cli_main'
bunruija-predict = 'bunruija.predict:cli_main'
bunruija-train = 'bunruija.train:cli_main'

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools", "cython"]
build-backend = "poetry.core.masonry.api"
